# home_work_28

./: pyproject.toml
ads/: models.py  views.py
